[package]
name = "fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "2.0.0"
num-complex = { version = "0.4.3", default-features = false }

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
approx = "0.5.1"
criterion = "0.5.1"
random = "0.14.0"

[[bench]]
name = "bench"
harness = false
