[package]
name = "fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "2.0.0"
num-traits = { version = "0.2.15", default-features = false }

[features]
default = ["alloc"]
alloc = []

[dev-dependencies]
approx = { version = "0.5.1", features = ["num-complex"] }
criterion = "0.5.1"
random = "0.14.0"
num-complex = { version = "0.4.3", default-features = false }

[[bench]]
name = "bench"
harness = false
